manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
spec:
  selector:
    app: authentication-service
  ports:
    - protocol: TCP
      port: 1234
