manifests/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authentication-ingress
spec:
  routes:
    - match: PathPrefix(`/auth`)
      kind: Rule
      services:
        - name: authentication-service
          port: 1234
      middlewares:
        - name: allow-headers
